<resources>
    <string name="app_name">Verify</string>
    <string name="log_in_txt">Log In</string>
    <string name="logo">logo</string>
    <string name="register_txt">Register</string>
    <string name="create_account">Create an Account</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="already_have_an_account_log_in_txt">Already have an account? Log In</string>
    <string name="company_organization_name_txt">Company/Organization Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="recent_entries">Recent Entries</string>
    <string name="password_requirements">Password must be 8-50 characters, with an uppercase letter, lowercase letter, number, and special character.</string>
    <string-array name="user_roles">
        <item>Admin</item>
        <item>Worker</item>
    </string-array>
</resources>